<resources>
    <string name="app_name">矩阵球</string>
    <string name="default_title">浮球矩阵演示系统</string>
    <string name="default_btn_name">按钮名称</string>
    <string name="title">标题</string>
    <string name="protocal">协议</string>
    <string name="input_title">请输入标题</string>
    <string name="service_ip">服务器地址</string>
    <string name="input_service_ip">请输入服务器地址</string>
    <string name="port">端口</string>
    <string name="input_port">请输入端口</string>
    <string name="connect">连接</string>
    <string name="btn_settting">按键设置</string>
    <string name="setting">设置</string>
    <string name="save">保存</string>
    <string name="name">名称</string>
    <string name="command">指令</string>
    <string name="input_button_name">请输入按钮名称</string>
    <string name="input_hex_command">请输入十六进制码</string>
    <string name="pls_input_name">请输入%s的名称</string>
    <string name="pls_input_protocal">请输入%s的十六进制码</string>
    <string name="connectting">连接中...</string>
    <string name="connected">断开连接</string>
    <string name="connected_str">已连接</string>
    <string name="connect_failed">连接失败</string>
    <string name="non_connect">未连接</string>
    <string name="send_failed_reason">发送失败\n %s</string>
    <string name="send_failed_reason2">发送失败</string>
</resources>
