<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:hint="@string/input_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:background="@color/main_bg_color"
                android:layout_width="match_parent"
                android:layout_height="7dp"/>

            <LinearLayout
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/protocal"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UDP"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/right_arror"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

            </LinearLayout>

            <View
                android:background="@color/main_bg_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/service_ip"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:hint="@string/input_service_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:background="@color/main_bg_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/port"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:hint="@string/input_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:background="@color/main_bg_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/connet_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:padding="10dp"
                android:background="@color/main_bg_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_settting"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcy_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <data>

        <import type="com.taian.floatingballmatrix.viewmodel.SettingViewModel" />


        <variable
            name="viewModel"
            type="SettingViewModel" />

    </data>


</layout>