<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.taian.floatingballmatrix.view.HeaderView
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_view">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_bg_color"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/ll_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:padding="15dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="right"
                        android:hint="@string/input_title"
                        android:singleLine="true"
                        android:text="@={viewModel.settingEntity.title}"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_protocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_title"
                    android:layout_marginTop="7dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    binding:onClickCommand="@{viewModel.onSetProtcalClickCommand}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/protocal"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.settingEntity.protocal}"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="5dp"
                        android:src="@mipmap/right_arror" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_service_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_protocal"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/service_ip"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:inputType="textUri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="right"
                        android:hint="@string/input_service_ip"
                        android:singleLine="true"
                        android:text="@={viewModel.settingEntity.ip}"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_service_ip"
                    android:layout_marginTop="1dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/port"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="right"
                        android:hint="@string/input_port"
                        android:singleLine="true"
                        android:text="@={viewModel.settingEntity.port}"
                        android:textSize="14sp" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fl1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_port"
                    android:background="@android:color/white">

                    <TextView
                        android:id="@+id/tv_connent"
                        android:enabled="@{viewModel.settingEntity.enabled}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/connet_selector"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@={viewModel.settingEntity.connecString}"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        binding:onClickCommand="@{viewModel.onConnentClickCommand}" />
                </FrameLayout>

                <TextView
                    binding:onClickCommand="@{viewModel.textClickCommand}"
                    android:id="@+id/btn_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fl1"
                    android:background="@color/main_bg_color"
                    android:padding="15dp"
                    android:text="@string/btn_settting"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp" />

                <FrameLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_setting" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/container"
                    android:layout_marginBottom="30dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@drawable/connet_selector"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        binding:onClickCommand="@{viewModel.onCmtClickCommand}" />
                </FrameLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

    <data>

        <import type="com.taian.floatingballmatrix.viewmodel.SettingViewModel" />


        <variable
            name="viewModel"
            type="SettingViewModel" />

    </data>


</layout>